Partially made the subscription view and style

--- a/UrbanLife.Web/Views/Subscription/All.cshtml
+++ b/UrbanLife.Web/Views/Subscription/All.cshtml
@@ -35,7 +35,7 @@
         <h3 class="subscription-card-title">Билет</h3>
         <p class="subscription-text"><b>Характеристики</b></p>
         <ul class="unordered-list subscription-features-list">
-            <li><i class="fa-solid fa-triangle-exclamation"></i>&ensp;Важи за 30 минути, 60 минути или 1 ден</li>
+            <li><i class="fa-solid fa-triangle-exclamation"></i>&ensp;Важи еднократно, за 30 минути, 60 минути или 1 ден</li>
             <li><i class="fa-solid fa-triangle-exclamation"></i>&ensp;За конкретна линия и час, за време, или за всички линии за ден</li>
         </ul>
         <p class="subscription-text"><b>Препоръчителна опция ако:</b></p>
