--- a/UrbanLife.Web/wwwroot/css/purchase-subscription.css
+++ b/UrbanLife.Web/wwwroot/css/purchase-subscription.css
@@ -4,15 +4,47 @@
     align-items: center;
 }
 
+.image-background-container {
+    position: fixed;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+}
+
+    .image-background-container > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
 .rate-table {
-    border: 1px solid black;
     text-align: center;
-    border-collapse: collapse;
+    border-spacing: 0px;
+    border: 1px solid black;
+    border-radius: 12px;
+    background-color: rgba(0,0,0, 0.4);
+    color: white;
+    -webkit-box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
+    box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
 }
 
 th, td {
     padding: 5px 20px;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+}
+
+tr:last-child > td {
+    border-bottom: none;
+}
+
+tr > td:last-child, th:last-child {
+    border-right: none;
+}
+
+.fa-circle-xmark {
+    color: var(--clr-log-out-red);
 }
 
 .subscription-form {
@@ -20,6 +52,12 @@ th, td {
     padding: 10px 15px;
     margin-bottom: 5vh;
     margin-top: 5vh;
+    border-radius: 12px;
+    background-color: rgba(0,0,0, 0.4);
+    color: white;
+    -webkit-box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
+    box-shadow: 1px 0px 49px -19px rgba(0,0,0,0.75);
 }
 
     .subscription-form > p:first-of-type {
@@ -55,7 +93,7 @@ th, td {
     margin-bottom: 5px;
 }
 
-.lines-list {
+.card-lines {
     text-align: center;
     width: 10vw;
     height: 150px;
@@ -76,14 +114,16 @@ th, td {
 }
 
 .messages {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-    .messages > p {
-        margin: 0px;
+    .messages > span:not(last-of-type) {
+        margin-bottom: 4px;
     }
 
-    .messages > p:last-of-type {
+    .messages > span:last-of-type {
         margin-bottom: 12px;
     }
 
@@ -91,14 +131,32 @@ th, td {
     color: var(--clr-log-out-red);
 }
 
+.form-text-warning {
+    color: #edc202;
+    width: 26vw;
+    text-align: center;
+}
+
 .submit-btn {
     padding-left: 10px;
     padding-right: 10px;
 }
 
-    .submit-btn:hover {
+    .submit-btn:enabled:hover {
         transition: 0.3s;
         cursor: pointer;
+        background-color: var(--clr-main-green);
+    }
+
+.anchor-button {
+    border: 1px solid black;
+    background-color: white;
+    text-decoration: none;
+    color: black;
+}
+
+    .anchor-button:hover {
+        transition: 0.3s;
         background-color: var(--clr-main-green);
     }
 
